# Mackna

./: README.md  index.html  main.js  package-lock.json  package.json  preload.js
leilos_files/leilos_cmd/: kill.bat
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: launcher.rs  main.rs
src/components/: ErrorModal.tsx  LaunchButton.tsx  Layout.tsx  LoginModal.tsx  Sidebar.tsx  SplashScreen.tsx
src/stores/: configStore.ts  userStore.ts
src/styles/: index.css
src/utils/: rpc.ts  translations.ts
