[package]
name = "leilos-launcher"
version = "1.1.5"
description = "Leilos Fortnite Launcher"
authors = ["Leilos Team & Crisutf"]
license = "GNU"
repository = "https://github.com/LeilosFN/Launcher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zip-extract = "0.1"
sevenz-rust = "0.6"
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
window-shadows = "0.2"
rfd = "0.10"
winapi = { version = "0.3", features = ["processthreadsapi", "winbase", "handleapi", "errhandlingapi", "synchapi", "winuser", "psapi", "memoryapi", "libloaderapi", "winnt", "shellapi"] }
widestring = "1.0"
sysinfo = "0.29"
discord-rich-presence = "0.2.4"
open = "5.0"
tiny_http = "0.12"
urlencoding = "2.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
